--- a/Static/style.css
+++ b/Static/style.css
@@ -1,15 +1,15 @@
 @import url(https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Noto+Kufi+Arabic:wght@100..900&display=swap);
-
 :root {
-    --primaryColor: #fff;
-    --seconderyColor: #272421;
-    --whiteColor: #3a3a3a;
+    --primaryColor: #ffffff;
+    --seconderyColor: #647953;
+    --whiteColor: #647953;
     --blackColor: #fff;
-    --softGreenColor: #ffc75e;
+    --softGreenColor: #e6ffd1;
     --darkGreyColor: #3b3b3b;
     --greyColor: #3a3a3a;
-    --whiteHeader: #fff;
-    --marquee: #fff
+    --whiteHeader: #3a3a3a;
+    --marquee: #fff;
+    --filter-icon: #647953;
 }
 
 * {
@@ -107,6 +107,7 @@ body {
     display: flex;
     align-items: center;
     gap: .5rem;
+    
 }
 
 .user {
@@ -115,7 +116,7 @@ body {
     align-items: center;
     background-color: var(--whiteColor);
     font-size: 100px;
-    color: var(--primaryColor);
+    color: var(--whiteHeader);
     text-decoration: none;
     padding: 10 10px;
     border-radius: 50%
@@ -146,7 +147,7 @@ body {
 }
 
 .main-header {
-    color: var(--whiteHeader);
+    color: var(--marquee);
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -301,7 +302,7 @@ body {
     height: 60%;
     font-size: 100px;
     background-color: var(--softGreenColor);
-    color: var(--primaryColor);
+    color: var(--filter-icon);
     border-radius: 10px
 }
 
@@ -586,7 +587,7 @@ img {
 }
 
 .marquee p{
-    color: var(--whiteHeader)
+    color: var(--marquee)
 }
 
 .myButton {
@@ -682,7 +683,7 @@ img {
     align-items: center;
     background-color: var(--whiteColor);
     font-size: 100px;
-    color: var(--primaryColor);
+    color: var(--whiteHeader);
     text-decoration: none;
     padding: 10 10px;
     border-radius: 50%
@@ -1503,7 +1504,7 @@ button {
         height: 50%;
         font-size: 50px;
         background-color: var(--softGreenColor);
-        color: var(--primaryColor);
+        color: var(--filter-icon);
         border-radius: 15px;
         box-shadow: 0 0 6px 2px rgba(0, 0, 0, .2)
     }
@@ -2177,7 +2178,7 @@ button {
         height: 50%;
         font-size: 40px;
         background-color: var(--softGreenColor);
-        color: var(--primaryColor);
+        color: var(--filter-icon);
         border-radius: 7px;
         box-shadow: 0 0 6px 2px rgba(0, 0, 0, .2)
     }
