--- a/Static/style.css
+++ b/Static/style.css
@@ -15,6 +15,8 @@
     --filter-icon: #647953;
 }
 
+/* main-header */
+
 * {
     margin: 0;
     padding: 0;
@@ -1484,7 +1486,7 @@ button {
     .main-header {
         display: flex;
         width: 100%;
-        height: 60px;
+        height: 35px;
         justify-content: space-between;
         align-items: center
     }
@@ -2055,8 +2057,9 @@ button {
 
     .marquee {
         margin: 0px;
-        font-size: 20px;
-        color: var(--marquee)
+        font-size: 15px;
+        color: var(--marquee);
+        font-weight: bold;
     }
 
     .myButton {
@@ -2117,7 +2120,8 @@ button {
 
     .main-title {
         font-size: 18px;
-        padding-right: 10px
+        padding-right: 10px;
+        font-weight: bold;
     }
 
     .main-arrow {
@@ -2159,7 +2163,7 @@ button {
     .main-header {
         display: flex;
         width: 100%;
-        height: 50px;
+        height: 30px;
         justify-content: space-between;
         align-items: center
     }
