--- a/Static/style.css
+++ b/Static/style.css
@@ -11,6 +11,7 @@
     /* profile */
     /* menu-toggle user img*/
     /* destination__grid */
+    /* telegram */
 html {
     scroll-behavior: smooth; /* يجعل التمرير سلسًا */
 }
